[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdmirror"
version = "0.2.0rc1"
description = "Mirror a folder tree into Claude-optimal Markdown — single-file bundle by default, ghost-tree mode optional."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fernando Ramirez", email = "f3r21@icloud.com" }]
keywords = ["markdown", "markitdown", "llm", "claude", "context", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = [
  "markitdown[docx,xlsx,xls,pptx,pdf,outlook]>=0.0.1a3",
  "pathspec>=0.12",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
all = ["markitdown[all]>=0.0.1a3"]
audio = ["markitdown[audio-transcription,youtube-transcription]>=0.0.1a3"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "build>=1.2",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/f3r21/mdmirror"
Source = "https://github.com/f3r21/mdmirror"
Issues = "https://github.com/f3r21/mdmirror/issues"
Changelog = "https://github.com/f3r21/mdmirror/blob/main/CHANGELOG.md"

[project.scripts]
mdmirror = "mdmirror.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdmirror"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: end-to-end tests that exercise real markitdown / external tools",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
